--- a/LibertyaTrunk/data/JasperReports/SubReporte_FacturaProveedorPorProyecto.jrxml
+++ b/LibertyaTrunk/data/JasperReports/SubReporte_FacturaProveedorPorProyecto.jrxml
@@ -51,9 +51,9 @@
 			<band height="23"  isSplitAllowed="true" >
 				<staticText>
 					<reportElement
-						x="161"
+						x="166"
 						y="0"
-						width="60"
+						width="55"
 						height="23"
 						key="staticText-1"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -64,9 +64,9 @@
 				</staticText>
 				<staticText>
 					<reportElement
-						x="55"
+						x="56"
 						y="0"
-						width="47"
+						width="51"
 						height="23"
 						key="staticText-2"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -77,7 +77,7 @@
 				</staticText>
 				<staticText>
 					<reportElement
-						x="101"
+						x="106"
 						y="0"
 						width="60"
 						height="23"
@@ -116,9 +116,9 @@
 				</staticText>
 				<staticText>
 					<reportElement
-						x="270"
+						x="271"
 						y="0"
-						width="55"
+						width="54"
 						height="23"
 						key="staticText-7"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -177,7 +177,7 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font pdfFontName="Helvetica-Bold" size="8" isBold="true"/>
 					</textElement>
-				<text><![CDATA[T/C]]></text>
+				<text><![CDATA[Mon.]]></text>
 				</staticText>
 			</band>
 		</title>
@@ -193,9 +193,9 @@
 			<band height="19"  isSplitAllowed="true" >
 				<textField isStretchWithOverflow="false" pattern="##0.00" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="161"
+						x="166"
 						y="0"
-						width="60"
+						width="53"
 						height="19"
 						key="textField"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -208,7 +208,7 @@
 					<reportElement
 						x="56"
 						y="0"
-						width="46"
+						width="50"
 						height="19"
 						key="textField-1"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -233,7 +233,7 @@
 				</textField>
 				<textField isStretchWithOverflow="false" pattern="##0.00" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="102"
+						x="107"
 						y="0"
 						width="59"
 						height="19"
@@ -274,7 +274,7 @@
 					<reportElement
 						x="325"
 						y="0"
-						width="54"
+						width="53"
 						height="19"
 						key="textField-4"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
