--- a/LibertyaTrunk/data/JasperReports/ReporteFacturaClienteProveedorPorProyecto.jrxml
+++ b/LibertyaTrunk/data/JasperReports/ReporteFacturaClienteProveedorPorProyecto.jrxml
@@ -197,19 +197,6 @@
 					</textElement>
 				<textFieldExpression   class="java.lang.String"><![CDATA[$P{ORG_NAME}]]></textFieldExpression>
 				</textField>
-				<textField isStretchWithOverflow="false" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
-					<reportElement
-						x="87"
-						y="53"
-						width="112"
-						height="16"
-						key="textField-23"/>
-					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
-					<textElement>
-						<font fontName="Tahoma" size="6"/>
-					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[$P{CLIENTE}]]></textFieldExpression>
-				</textField>
 				<staticText>
 					<reportElement
 						mode="Transparent"
@@ -225,22 +212,6 @@
 						<font pdfFontName="Helvetica-Bold" size="8" isBold="true"/>
 					</textElement>
 				<text><![CDATA[Proyecto / Carpeta:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement
-						mode="Transparent"
-						x="7"
-						y="53"
-						width="80"
-						height="16"
-						forecolor="#010101"
-						backcolor="#FFFFFF"
-						key="staticText-37"/>
-					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
-					<textElement textAlignment="Left">
-						<font pdfFontName="Helvetica-Bold" size="8" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Cliente:]]></text>
 				</staticText>
 				<staticText>
 					<reportElement
@@ -294,7 +265,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="103"
+						x="106"
 						y="0"
 						width="60"
 						height="23"
@@ -310,9 +281,9 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="163"
+						x="166"
 						y="0"
-						width="60"
+						width="55"
 						height="23"
 						forecolor="#010101"
 						backcolor="#FFFFFF"
@@ -328,7 +299,7 @@
 						mode="Transparent"
 						x="56"
 						y="0"
-						width="47"
+						width="51"
 						height="23"
 						forecolor="#010101"
 						backcolor="#FFFFFF"
@@ -342,7 +313,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="223"
+						x="221"
 						y="0"
 						width="50"
 						height="23"
@@ -358,9 +329,9 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="273"
+						x="271"
 						y="0"
-						width="55"
+						width="54"
 						height="23"
 						forecolor="#010101"
 						backcolor="#FFFFFF"
@@ -374,7 +345,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="328"
+						x="325"
 						y="0"
 						width="55"
 						height="23"
@@ -390,7 +361,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="383"
+						x="380"
 						y="0"
 						width="55"
 						height="23"
@@ -406,7 +377,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="438"
+						x="435"
 						y="0"
 						width="55"
 						height="23"
@@ -422,7 +393,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="493"
+						x="490"
 						y="0"
 						width="42"
 						height="23"
@@ -433,7 +404,7 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font pdfFontName="Helvetica-Bold" size="8" isBold="true"/>
 					</textElement>
-				<text><![CDATA[T/C]]></text>
+				<text><![CDATA[Mon.]]></text>
 				</staticText>
 			</band>
 		</columnHeader>
@@ -443,7 +414,7 @@
 					<reportElement
 						x="0"
 						y="0"
-						width="57"
+						width="55"
 						height="19"
 						key="textField"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -454,9 +425,9 @@
 				</textField>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="103"
+						x="107"
 						y="0"
-						width="60"
+						width="59"
 						height="19"
 						key="textField"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -467,9 +438,9 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="163"
+						x="166"
 						y="0"
-						width="58"
+						width="53"
 						height="19"
 						key="textField"
 						isPrintWhenDetailOverflows="true"/>
@@ -483,7 +454,7 @@
 					<reportElement
 						x="56"
 						y="0"
-						width="47"
+						width="50"
 						height="19"
 						key="textField-14"
 						isPrintWhenDetailOverflows="true"/>
@@ -495,7 +466,7 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="223"
+						x="221"
 						y="0"
 						width="50"
 						height="19"
@@ -509,7 +480,7 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="273"
+						x="271"
 						y="0"
 						width="53"
 						height="19"
@@ -523,7 +494,7 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="328"
+						x="325"
 						y="0"
 						width="53"
 						height="19"
@@ -537,7 +508,7 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="383"
+						x="380"
 						y="0"
 						width="55"
 						height="19"
@@ -551,7 +522,7 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="438"
+						x="435"
 						y="0"
 						width="55"
 						height="19"
@@ -565,7 +536,7 @@
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="493"
+						x="490"
 						y="0"
 						width="42"
 						height="19"
@@ -592,7 +563,7 @@
 				<staticText>
 					<reportElement
 						mode="Transparent"
-						x="223"
+						x="221"
 						y="5"
 						width="50"
 						height="11"
@@ -607,7 +578,7 @@
 				</staticText>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="273"
+						x="271"
 						y="5"
 						width="53"
 						height="11"
@@ -632,7 +603,7 @@
 				</subreport>
 				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
 					<reportElement
-						x="328"
+						x="325"
 						y="5"
 						width="53"
 						height="11"
