--- a/LibertyaTrunk/data/JasperReports/SubReporte_FacturaProveedor.jrxml
+++ b/LibertyaTrunk/data/JasperReports/SubReporte_FacturaProveedor.jrxml
@@ -79,9 +79,9 @@
 				</staticText>
 				<staticText>
 					<reportElement
-						x="91"
+						x="92"
 						y="0"
-						width="60"
+						width="58"
 						height="23"
 						key="staticText-3"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -94,7 +94,7 @@
 					<reportElement
 						x="0"
 						y="0"
-						width="46"
+						width="45"
 						height="23"
 						key="staticText-5"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -107,7 +107,7 @@
 					<reportElement
 						x="205"
 						y="0"
-						width="25"
+						width="24"
 						height="23"
 						key="staticText-6"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -120,7 +120,7 @@
 					<reportElement
 						x="229"
 						y="0"
-						width="55"
+						width="54"
 						height="23"
 						key="staticText-7"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -133,7 +133,7 @@
 					<reportElement
 						x="283"
 						y="0"
-						width="55"
+						width="54"
 						height="23"
 						key="staticText-8"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -146,7 +146,7 @@
 					<reportElement
 						x="337"
 						y="0"
-						width="55"
+						width="54"
 						height="23"
 						key="staticText-9"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -185,7 +185,7 @@
 					<reportElement
 						x="461"
 						y="0"
-						width="55"
+						width="54"
 						height="23"
 						key="staticText-14"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="1Point" bottomBorderColor="#000000"/>
@@ -205,7 +205,7 @@
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font pdfFontName="Helvetica-Bold" size="8" isBold="true"/>
 					</textElement>
-				<text><![CDATA[T/C]]></text>
+				<text><![CDATA[Mon.]]></text>
 				</staticText>
 			</band>
 		</title>
@@ -249,7 +249,7 @@
 					<reportElement
 						x="0"
 						y="0"
-						width="46"
+						width="45"
 						height="19"
 						key="textField"
 						isPrintWhenDetailOverflows="true"/>
@@ -263,7 +263,7 @@
 					<reportElement
 						x="93"
 						y="0"
-						width="58"
+						width="57"
 						height="19"
 						key="textField"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -276,7 +276,7 @@
 					<reportElement
 						x="205"
 						y="0"
-						width="25"
+						width="24"
 						height="19"
 						key="textField-2"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -315,7 +315,7 @@
 					<reportElement
 						x="339"
 						y="0"
-						width="53"
+						width="52"
 						height="19"
 						key="textField-5"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
@@ -354,7 +354,7 @@
 					<reportElement
 						x="461"
 						y="0"
-						width="55"
+						width="53"
 						height="19"
 						key="textField-12"/>
 					<box topBorder="None" topBorderColor="#000000" leftBorder="None" leftBorderColor="#000000" rightBorder="None" rightBorderColor="#000000" bottomBorder="None" bottomBorderColor="#000000"/>
